# privmx-endpoint-java

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
.github/ISSUE_TEMPLATE/: bug-report.yaml
examples/privmx-snippets/: build.gradle
examples/privmx-snippets/src/main/java/Stacks/JavaKotlin/: PrivMXEndpointJava.java
examples/privmx-snippets/src/main/java/Tools/Stores/UsingStores/: DownloadingFiles.java  ManagingFiles.java  ManagingStores.java  (+2 more)
examples/privmx-snippets/src/main/kotlin/Stacks/JavaKotlin/: CustomFieldsAndQueries.kt  CustomFieldsAndQueries.kt.kt  PolicyBuilders.kt  PrivMXEndpointJava.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
privmx-endpoint/: build.gradle
privmx-endpoint-android/: build.gradle  proguard-rules.pro
privmx-endpoint-android/src/main/: AndroidManifest.xml
privmx-endpoint-extra/: .gitignore  build.gradle  proguard-rules.pro
privmx-endpoint-extra/src/test/java/com/simplito/privmxendpointwrapper/: ExampleUnitTest.java
privmx-endpoint/src/main/cpp/: .gitignore  CMakeLists.txt  conanfile.txt  jniUtils.cpp  jniUtils.h  model_native_initializers.cpp  model_native_initializers.h  parser.cpp  parser.h  utils.cpp  utils.hpp
privmx-endpoint/src/main/cpp/modules/: BackendRequester.cpp  Connection.cpp  CryptoApi.cpp  EventApi.cpp  EventApi.h  EventQueue.cpp  ExtKey.cpp  InboxApi.cpp  KvdbApi.cpp  KvdbApi.h  StoreApi.cpp  StreamApiLow.cpp  ThreadApi.cpp  UserVerifierInterfaceJNI.cpp  UserVerifierInterfaceJNI.h  Utils.cpp  WebRTCInterfaceJNI.cpp  WebRTCInterfaceJNI.h
(+131 files in other folders)
